// Vitest Snapshot v1

exports[`Skeleton > slot layout 1`] = `
"<div class=\\"fx-skeleton\\">
  <div class=\\"fx-skeleton-image\\"></div>
  <div class=\\"fx-skeleton-title\\"></div>
  <ul class=\\"fx-skeleton-paragraph\\">
    <li></li>
    <li></li>
    <li></li>
  </ul>
  <div class=\\"fx-skeleton-button shape--default\\"></div>
</div>"
`;

exports[`Skeleton > snapshot 1`] = `
"<div class=\\"fx-skeleton\\">
  <div class=\\"fx-skeleton_layout\\">
    <!--v-if-->
    <div class=\\"fx-skeleton_layout-right\\">
      <div class=\\"fx-skeleton-title\\"></div>
      <ul class=\\"fx-skeleton-paragraph\\">
        <li></li>
        <li></li>
        <li></li>
      </ul>
    </div>
  </div>
</div>"
`;
